<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv_patient_form"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:divider="@drawable/divider"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/spaced_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/patient_form_title"
                    android:gravity="center"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_patient_form_familyname"
                    style="@style/spaced_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/patient_form_familyname" />

                <EditText
                    android:id="@+id/et_patient_form_familyname"
                    style="@style/spaced_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/patient_form_givenname_text"
                    style="@style/spaced_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/patient_form_givenname" />

                <EditText
                    android:id="@+id/et_patient_form_givename"
                    style="@style/spaced_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/patient_form_dob_title"
                    style="@style/spaced_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/patient_form_dob_long" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_patient_form_dob"
                        android:layout_width="117dp"
                        android:layout_height="34dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/patient_form_dob_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteX="156dp"
                        tools:layout_editor_absoluteY="296dp" />

                    <Button
                        android:id="@+id/btn_patient_form_dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/patient_form_dob_prompt" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_patient_form_weight"
                    style="@style/spaced_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/patient_form_height" />

                <EditText
                    android:id="@+id/et_patient_form_weight"
                    style="@style/spaced_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tv_patient_form_height"
                    style="@style/spaced_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_form_weight" />

                <EditText
                    android:id="@+id/et_patient_form_height"
                    style="@style/spaced_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_patient_form_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/patient_form_continue_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>

